[package]
name = "tunrelay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
pnet = "0.34.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tun = "0.11.2"
